# hcc-edge-moe

./: .gitignore  Cargo.toml  Heterogeneous_Compute_Cascade.tex  README.md  config.toml  patch.py  patch2.py  patch3.py  test_on_strix.sh  todo260515.md
configs/: qwen36-35b-a3b.toml
src/: benchmark.rs  config.rs  error.rs  main.rs  measure.rs  orchestrator.rs  tuner.rs
src/decoding/: dovetail.rs  mod.rs  picospec.rs  rejection.rs  speculative.rs  tree_attention.rs
src/igpu/: migraphx.rs  mod.rs  target_runner.rs
src/interconnect/: af_xdp.rs  dmabuf.rs  mod.rs  protocol.rs  usb4.rs
src/kv_cache/: custom_mla.rs  mixed_precision.rs  mla_576_kernel.cpp  mod.rs  qjl.rs  turboquant.rs  walsh_hadamard.rs
src/npu/: calibrator.rs  context_compressor.rs  draft_runner.rs  mod.rs  router.rs  xrt.rs
src/session/: agentic.rs  metrics.rs  mod.rs  session_manager.rs
