[package]
name = "hcc-edge-moe"
version = "0.2.0"
edition = "2021"
description = "Heterogeneous Compute Cascade — production distributed MoE inference across dual AMD Ryzen APU nodes via USB4"

[[bin]]
name = "hcch"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "net", "process"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
toml = "0.8"
rand = "0.8"
rand_distr = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
fastrand = "2"
bitflags = "2"
libc = "0.2"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# TurboQuant KV cache — replaces hand-rolled impl
turboquant-rs = "0.4"

# Dynamic loading for MIGraphX/ROCm runtime linking
libloading = "0.8"

# Memory-mapped I/O for DMA-BUF
memmap2 = "0.9"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
